@@ -1,5 +1,8 @@
 Thu Apr 10 00:14:47 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* sanity.sh (basicb): New tests basicb-14 to basicb-20 test use of
+	co -d with two or more arguments.
+
 	* rcscmds.c: Refer to doc/RCSFILES in comment.
 
 Wed Apr  9 09:49:17 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
